@@ -8,7 +8,7 @@
 //####ECOSGPLCOPYRIGHTBEGIN####
 // -------------------------------------------
 // This file is part of eCos, the Embedded Configurable Operating System.
-// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
+// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003 Red Hat, Inc.
 //
 // eCos is free software; you can redistribute it and/or modify it under
 // the terms of the GNU General Public License as published by the Free
@@ -67,6 +67,7 @@
 #ifdef CYGPKG_REDBOOT_NETWORKING
 #define CONFIG_IP      5
 #define CONFIG_ESA     6
+#define CONFIG_NETPORT 7
 #endif
 
 struct config_option {
